# py-cluster-ensemble

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: analysis_plot.py  generators_batch.py  generators_single.py  grid_search.py  workflow_single.py
demo/data/: isolet_1560n_617d_2c.mat
demo/data/generators/BAGKM200/: tr45_690n_8261d_10c_BAGKM200.mat
demo/data/generators/LKM200/: isolet_1560n_617d_2c_LKM200.mat  tr45_690n_8261d_10c_LKM200.mat
demo/data/generators/RPKM200/: isolet_1560n_617d_2c_RPKM200.mat  tr45_690n_8261d_10c_RPKM200.mat
demo/data/generators/RSKM200/: tr45_690n_8261d_10c_RSKM200.mat
demo/data/grid/GridSearch_001/: grid_summary.csv
demo/data/workflow/: isolet_1560n_617d_2c_CDKM200.mat  isolet_1560n_617d_2c_CDKM200_CSPA.csv
docs/: conf.py  index.rst
docs/_templates/: class.rst
docs/api/: api.rst  modules.rst  pce.analysis.rst  pce.applications.rst  pce.consensus.rst  pce.generators.rst  pce.grid.rst  pce.io.rst  pce.metrics.rst  pce.pipelines.rst  pce.rst  pce.utils.rst
docs/examples/: base_clustering_generation.rst  batch_processing.rst  domain_applications.rst  grid_search_optimization.rst  visualization_gallery.rst
docs/guide/: consensus_algorithms.rst  evaluation_metrics.rst  generation_strategies.rst  matlab_migration.rst
docs/start/: installation.rst  introduction.rst  quick_start.rst
examples/: analysis_plot.py  generators_batch.py  generators_single.py  grid_search.py  workflow_batch.py  workflow_single.py
examples/application/DCC/dataset/: README.md  data_test.pkl  data_valid.pkl
examples/application/Deep_Consensus_Clustering/: dcc.py
examples/application/Deep_Consensus_Clustering/dataset/: data.pkl  data_train.pkl
examples/application/Deep_Consensus_Clustering/sample/: com_iv.csv
examples/application/FastEnsemble/: fast_ensemble.py
examples/application/FastEnsemble/data/: sc_1.0_ring_cliques_100_10.tsv  tc_1.0_ring_cliques_100_10.tsv
examples/application/FastEnsemble/results/: results.csv
examples/application/ICSC/: icsc.py
examples/application/SC3/: sc3.py
examples/application/SC3/results/: metrics.csv  sc3_results.xlsx
examples/data/: tr45_690n_8261d_10c.mat
examples/data/CDKM200/: isolet_1560n_617d_2c_CDKM200.mat
examples/data/HETCLU200/: isolet_1560n_617d_2c_HETCLU200.mat
examples/data/LKM200/: isolet_1560n_617d_2c_LKM200.mat
examples/data/RSKM200/: isolet_1560n_617d_2c_RSKM200.mat
examples/data/generators/BAGKM200/: isolet_1560n_617d_2c_BAGKM200.mat
examples/data/generators/CDKM200/: tr45_690n_8261d_10c_CDKM200.mat
examples/data/grid/GridSearch_001/: grid_summary.csv
examples/results/grid/GridSearch_001/: grid_summary.csv
src/pce/: __init__.py
src/pce/analysis/: __init__.py  plot.py  utils.py
src/pce/applications/: __init__.py  dcc.py  eac.py  fast_ensemble.py  icsc.py  sc3.py
src/pce/consensus/: __init__.py  cdec.py  cdkm.py  ceam.py  celta.py  cspa.py  cspa_main.py  cspa_multi.py  cspa_old.py  dcc.py  drec.py  eccms.py  ecpcs_hc.py  ecpcs_mc.py  gtlec.py  hgpa.py  hgpa_old.py  icsc.py  kcc_uc.py  kcc_uh.py  lwea.py  lwgp.py  mcla.py  mcla_old.py  mdecbg.py  mdechc.py  mdecsc.py  ptaal.py  ptacl.py  ptasl.py  ptgp.py  sc3.py  space.py  spce.py  trce.py  usenc.py
src/pce/generation/: __init__.py  bagging_pool.py  cdkmeans.py  kmeans_pool.py  litekmeans.py
src/pce/generators/: __init__.py  bagkmeans.py  cdkmeans.py  cdkmeans_old.py  hetero_clustering.py  litekmeans.py  litekmeans_main.py  litekmeans_old.py  rpkmeans.py  rskmeans.py  sc3_generator.py  sc3_kmeans.py  spectral.py
src/pce/grid/: __init__.py  grid_search.py  search.py  utils.py
src/pce/io/: __init__.py  load_mat.py  load_rda.py  save_base.py  save_csv.py  save_mat.py  save_results.py  save_xlsx.py
src/pce/metrics/: __init__.py  evaluation.py  evaluation_batch.py  evaluation_labels.py  evaluation_single.py
src/pce/pipelines/: __init__.py  consensus_batch.py
src/pce/utils/: __init__.py  show_function_params.py
tests/: conftest.py  test_analysis.py  test_applications.py  test_consensus.py  test_generators.py  test_grid.py  test_io.py  test_metrics.py  test_pipelines.py  test_utils.py
(+515 files in other folders)
