[tool.poetry]
name = "py-cluster-ensemble"
version = "1.0.0"
description = "A Python toolkit for Cluster Ensembles generation, consensus, and visualization."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/HeWenjun824699/py-cluster-ensemble"

# 【关键设置】这里定义了代码包的位置和名字
packages = [
    { include = "pce", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
h5py = "^3.11"
numpy = "^1.26"
scipy = "^1.11"
scikit-learn = "^1.3"
networkx = "^3.2"       # 用于 CSPA/MCLA 等图算法
matplotlib = "^3.7.5"   # 用于可视化
seaborn = "^0.13"       # 用于画更好看的共识矩阵热力图
tqdm = "^4.66"          # 进度条 (集成算法跑得慢时很有用)
pandas = "^2.2"         # io 模块依赖
xlsxwriter = "^3.2"     # 用于 save_xlsx 的格式化输出
pyreadr = "^0.5.4"      # 用于 RData 文件的读入
fastcluster = "^1.2.6"  # 用于 fastcluster

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"         # 测试框架
pytest-cov = "^4.1"     # 覆盖率检查
ruff = "^0.3"           # 极速代码检查工具

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"