[tool.poetry]
name = "py-cluster-ensemble"
version = "1.0.0"
description = "A Python toolkit for Cluster Ensembles generation, consensus, and visualization."
authors = ["PCE Team <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/HeWenjun824699/py-cluster-ensemble"

# [Key Setting] Define the location and name of the package
packages = [
    { include = "pce", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
h5py = "^3.11"
numpy = "^1.26"
scipy = "^1.11"
scikit-learn = "^1.3"
networkx = "^3.2"       # Used for graph algorithms like CSPA/MCLA
matplotlib = "^3.7.5"   # Used for visualization
seaborn = "^0.13"       # Used for plotting high-quality consensus matrix heatmaps
tqdm = "^4.66"          # Progress bar (useful for long-running ensemble algorithms)
pandas = "^2.2"         # IO module dependency
xlsxwriter = "^3.2"     # Used for formatted output in save_xlsx
pyreadr = "^0.5.4"      # Used for reading RData files
fastcluster = "^1.2.6"  # Used for fastcluster
igraph = "^0.11"        # Graph algorithms for FastEnsemble
leidenalg = "^0.10"     # Leiden algorithm for FastEnsemble
python-louvain = "^0.16" # Louvain algorithm for FastEnsemble
sphinx = { version = "^7.0", optional = true }
sphinx-rtd-theme = { version = "^2.0", optional = true }
nbsphinx = { version = "^0.9", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"         # Testing framework
pytest-cov = "^4.1"     # Coverage check
ruff = "^0.3"           # Fast linting tool

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]
