[tool.poetry]
name = "py-cluster-ensemble"
version = "1.0.0"
description = "A Python toolkit for Cluster Ensembles generation, consensus, and visualization."
authors = ["PCE Team 18534968246@163.com"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/WenjunHe-ML/py-cluster-ensemble"

# [Key Setting] Define the location and name of the package
packages = [
    { include = "pce", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.11"
h5py = "^3.11"
numpy = "^1.26"
scipy = "^1.11"
scikit-learn = "^1.3"
matplotlib = "~3.7.5"
seaborn = "^0.13"
tqdm = "^4.66"
pandas = "^2.2"
xlsxwriter = "^3.2"
pyreadr = "^0.5.4"
fastcluster = "^1.2.6"
python-louvain = "^0.16"
kneed = "^0.8.5"
torch = "^2.2.0"
tensorboard = "^2.15.0"
nilearn = "^0.10"
sphinx = { version = "^7.0", optional = true }
sphinx-rtd-theme = { version = "^2.0", optional = true }
nbsphinx = { version = "^0.9", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
ruff = "^0.3"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]
